gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test23073.d
version https://git-lfs.github.com/spec/v1
oid sha256:622945534f5a74f7e204fd1ed868fe041ae5ad17ba5c5994d65fee2780de8b4e
size 598
